{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 35,
  "lineage": "6c24b1b3-73a6-df61-d309-0dd00bdec57a",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:security-group/sg-0c5dfc8609ecc8477",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5dfc8609ecc8477",
            "ingress": [],
            "name": "EKS_Cluster-Tech_Challenge",
            "name_prefix": "",
            "owner_id": "637423375063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS_Cluster_Security_Group-Tech_Challenge"
            },
            "tags_all": {
              "Name": "EKS_Cluster_Security_Group-Tech_Challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc8c09c25024ca25",
            "arn": "arn:aws:ec2:us-east-2:637423375063:elastic-ip/eipalloc-0dc8c09c25024ca25",
            "domain": "vpc",
            "id": "eipalloc-0dc8c09c25024ca25",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-2-53.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.2.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IP_Elastico_a-Tech_Challenge"
            },
            "tags_all": {
              "Name": "IP_Elastico_a-Tech_Challenge"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b8a702e036426c2",
            "arn": "arn:aws:ec2:us-east-2:637423375063:elastic-ip/eipalloc-04b8a702e036426c2",
            "domain": "vpc",
            "id": "eipalloc-04b8a702e036426c2",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-132-178-134.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.178.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IP_Elastico_b-Tech_Challenge"
            },
            "tags_all": {
              "Name": "IP_Elastico_b-Tech_Challenge"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:internet-gateway/igw-0b159d18f7800a319",
            "id": "igw-0b159d18f7800a319",
            "owner_id": "637423375063",
            "tags": {
              "Name": "Internet_Gateway-Tech_Challenge"
            },
            "tags_all": {
              "Name": "Internet_Gateway-Tech_Challenge"
            },
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:637423375063:loadbalancer/app/load-balance-tech-challenge/44bd144144d28946",
            "arn_suffix": "app/load-balance-tech-challenge/44bd144144d28946",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balance-tech-challenge-1040857974.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:637423375063:loadbalancer/app/load-balance-tech-challenge/44bd144144d28946",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balance-tech-challenge",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07144c282edcfd864"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ca0e6df9453daf0f"
              },
              {
                "subnet_id": "subnet-0d39c7fedd8b918aa"
              }
            ],
            "subnets": [
              "subnet-0ca0e6df9453daf0f",
              "subnet-0d39c7fedd8b918aa"
            ],
            "vpc_id": "vpc-0fb3c6872acc08710",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.network.aws_security_group.security_group_load_balance",
            "module.network.aws_subnet.sub_ext_a_tech_challenge",
            "module.network.aws_subnet.sub_ext_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc8c09c25024ca25",
            "association_id": "eipassoc-02144f88dd1e1c3e6",
            "connectivity_type": "public",
            "id": "nat-01dfc2f7a86fdf8a4",
            "network_interface_id": "eni-0fd2fb0b63c89cae0",
            "private_ip": "10.110.11.21",
            "public_ip": "3.139.2.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca0e6df9453daf0f",
            "tags": {
              "Name": "NAT_Gateway_a-Tech_Challenge"
            },
            "tags_all": {
              "Name": "NAT_Gateway_a-Tech_Challenge"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_a",
            "module.network.aws_subnet.sub_ext_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b8a702e036426c2",
            "association_id": "eipassoc-01930ef5a9106318b",
            "connectivity_type": "public",
            "id": "nat-07cddfe5a36a325d5",
            "network_interface_id": "eni-01180290f6d6372c3",
            "private_ip": "10.110.10.115",
            "public_ip": "3.132.178.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d39c7fedd8b918aa",
            "tags": {
              "Name": "NAT_Gateway_b-Tech_Challenge"
            },
            "tags_all": {
              "Name": "NAT_Gateway_b-Tech_Challenge"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_b",
            "module.network.aws_subnet.sub_ext_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_external_sub_net_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b159d18f7800a319",
            "id": "r-rtb-09bd602568bfa4f691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09bd602568bfa4f69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw_tech_challenge",
            "module.network.aws_route_table.external_route_table_a",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_external_sub_net_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b159d18f7800a319",
            "id": "r-rtb-06c8131969389df6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c8131969389df6c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw_tech_challenge",
            "module.network.aws_route_table.external_route_table_b",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_internal_sub_net_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057614f9271afed131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01dfc2f7a86fdf8a4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057614f9271afed13",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_a",
            "module.network.aws_nat_gateway.nat_gtw_a",
            "module.network.aws_route_table.internal_route_table_a",
            "module.network.aws_subnet.sub_ext_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_default_internal_sub_net_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b6893a17438f05ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07cddfe5a36a325d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6893a17438f05ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway_eip_b",
            "module.network.aws_nat_gateway.nat_gtw_b",
            "module.network.aws_route_table.internal_route_table_b",
            "module.network.aws_subnet.sub_ext_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "external_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:route-table/rtb-09bd602568bfa4f69",
            "id": "rtb-09bd602568bfa4f69",
            "owner_id": "637423375063",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Tabela_Roteamento_Externa_a"
            },
            "tags_all": {
              "Name": "Tabela_Roteamento_Externa_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "external_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:route-table/rtb-06c8131969389df6c",
            "id": "rtb-06c8131969389df6c",
            "owner_id": "637423375063",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Tabela_Roteamento_Externa_b"
            },
            "tags_all": {
              "Name": "Tabela_Roteamento_Externa_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:route-table/rtb-057614f9271afed13",
            "id": "rtb-057614f9271afed13",
            "owner_id": "637423375063",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Tabela_Roteamento_Interna_a-Tech_Challenge"
            },
            "tags_all": {
              "Name": "Tabela_Roteamento_Interna_a-Tech_Challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:route-table/rtb-0b6893a17438f05ab",
            "id": "rtb-0b6893a17438f05ab",
            "owner_id": "637423375063",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Tabela_Roteamento_Interna_b-Tech_Challenge"
            },
            "tags_all": {
              "Name": "Tabela_Roteamento_Interna_b-Tech_Challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_externo_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f973b3d35ab30a45",
            "route_table_id": "rtb-09bd602568bfa4f69",
            "subnet_id": "subnet-0ca0e6df9453daf0f"
          },
          "dependencies": [
            "module.network.aws_route_table.external_route_table_a",
            "module.network.aws_subnet.sub_ext_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_externo_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f00d4a91379bf525",
            "route_table_id": "rtb-06c8131969389df6c",
            "subnet_id": "subnet-0d39c7fedd8b918aa"
          },
          "dependencies": [
            "module.network.aws_route_table.external_route_table_b",
            "module.network.aws_subnet.sub_ext_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_interno_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071d695b02f744eb2",
            "route_table_id": "rtb-057614f9271afed13",
            "subnet_id": "subnet-05faab242eee4beac"
          },
          "dependencies": [
            "module.network.aws_route_table.internal_route_table_a",
            "module.network.aws_subnet.sub_int_a_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_interno_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056d9e257576d8bc2",
            "route_table_id": "rtb-0b6893a17438f05ab",
            "subnet_id": "subnet-042db35ed36d06cd3"
          },
          "dependencies": [
            "module.network.aws_route_table.internal_route_table_b",
            "module.network.aws_subnet.sub_int_b_tech_challenge",
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_load_balance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:security-group/sg-07144c282edcfd864",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07144c282edcfd864",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security_group_load_balance-Tech_Challenge2024112500475425090000000a",
            "name_prefix": "security_group_load_balance-Tech_Challenge",
            "owner_id": "637423375063",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_ext_a_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:subnet/subnet-0ca0e6df9453daf0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.110.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca0e6df9453daf0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423375063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Externa-A-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "tags_all": {
              "Name": "Subnet-Externa-A-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_ext_b_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:subnet/subnet-0d39c7fedd8b918aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.110.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d39c7fedd8b918aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423375063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Externa-B-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "tags_all": {
              "Name": "Subnet-Externa-B-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_int_a_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:subnet/subnet-05faab242eee4beac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05faab242eee4beac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423375063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Interna-A-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "tags_all": {
              "Name": "Subnet-Interna-A-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_int_b_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:subnet/subnet-042db35ed36d06cd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.110.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042db35ed36d06cd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423375063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Interna-B-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "tags_all": {
              "Name": "Subnet-Interna-B-Tech_Challenge",
              "kubernetes.io/cluster/Tech_Challenge": "shared"
            },
            "vpc_id": "vpc-0fb3c6872acc08710"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc_tech_challenge"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tech_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:637423375063:vpc/vpc-0fb3c6872acc08710",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-09f517a6aab1fb814",
            "default_route_table_id": "rtb-09d7bc84a87bcdd41",
            "default_security_group_id": "sg-0679e23c77142ff99",
            "dhcp_options_id": "dopt-082388a8bbaa4a249",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb3c6872acc08710",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d7bc84a87bcdd41",
            "owner_id": "637423375063",
            "tags": {
              "Name": "VPC-Tech_Challenge"
            },
            "tags_all": {
              "Name": "VPC-Tech_Challenge"
            }
          }
        }
      ]
    }
  ]
}